fixing bubble offscreen when window minimized 2

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1082,22 +1082,22 @@ button:hover, .button:hover {
 }
 
 .bubble.long_green {
-  left: 35vw;
+  left: 38vw;
   animation: animateLong 23s linear infinite;
 }
 
 .bubble.long_blue2 {
-  left: 65vw;
+  left: 58vw;
   animation: animateLong 13s linear infinite;
 }
 
 .bubble.long_light2 {
-  left: 74vw;
+  left: 80vw;
   animation: animateLong 30s linear infinite;
 }
 
 .bubble.long_green2 {
-  left: 90vw;
+  left: 95vw;
   animation: animateLong 15s linear infinite;
 }
 /*----Long Bubbles----*/
